--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <body>
     <header>
     <nav>
+        <a href="" lang="en">WebStudio</a>
         <ul>
-            <li>
-                <a href="" lang="en">WebStudio</a>
-            </li>
             <li>
                 <a href="#team">Студия</a>
             </li>
@@ -117,7 +115,7 @@
         </section>
     </main>
     <footer>
-        <h2 lang="en">WebStudio</h2>
+        <h2 lang="en"><a href="" lang="en">WebStudio</a></h2>
         <h2 hidden>Контакты</h2>
         <address id="contacts">
           <ul>
