--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         </section>
         <section id="our-work">
             <h2>ЧЕМ МЫ ЗАНИМАЕМСЯ</h2>
-            <!--ссылкu на запись онлайн--> 
+            <!--ссылкu на запись онлайн
+            хотя в полне возможно чтоб это было просто фото как галерея. но ссылка лучше для бизнеса--> 
             <ul>
                 <li>
                     <a href="">
