--- a/index.html
+++ b/index.html
@@ -37,21 +37,22 @@
             <button type="button">Заказать услугу</button>
         </section>
         <section>
+            <h2 hidden>Наши преимущества</h2>
             <ul>
                 <li>
-                    <strong>ВНИМАНИЕ К ДЕТАЛЯМ</strong>
+                    <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                     <p>Идейные соображения , а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <strong>ПУНКТУАЛЬНОСТЬ</strong>
+                    <h3>ПУНКТУАЛЬНОСТЬ</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <strong>ПЛАНИРОВАНИЕ</strong>
+                    <h3>ПЛАНИРОВАНИЕ</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <strong>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ  </strong>
+                    <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ  </h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>                
             </ul>
@@ -62,22 +63,16 @@
             хотя в полне возможно чтоб это было просто фото как галерея. но ссылка лучше для бизнеса--> 
             <ul>
                 <li>
-                    <a href="">
-                        <img src="./images/occupation/occupation-1.jpg" 
-                        alt="работаем с компьютером" width="370" height="294" />
-                    </a>
+                    <img src="./images/occupation/occupation-1.jpg" 
+                    alt="работаем с компьютером" width="370" height="294" />
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/occupation/occupation-2.jpg" 
-                        alt="работаем с телефоном" width="370" height="294" />
-                    </a>
+                    <img src="./images/occupation/occupation-2.jpg" 
+                    alt="работаем с телефоном" width="370" height="294" />
                 </li>
                 <li>\
-                    <a href="">
-                        <img src="./images/occupation/occupation-3.jpg" 
-                        alt="работаем с планшетом" width="370" height="294" />
-                    </a>
+                    <img src="./images/occupation/occupation-3.jpg" 
+                    alt="работаем с планшетом" width="370" height="294" />
                 </li>
             </ul>
         </section>
@@ -117,7 +112,6 @@
     </main>
     <footer>
         <h2 lang="en"><a href="" lang="en">WebStudio</a></h2>
-        <h2 hidden>Контакты</h2>
         <address id="contacts">
           <ul>
             <li>
