футер не в заголовці

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </section>
     </main>
     <footer>
-        <h2 lang="en"><a href="" lang="en">WebStudio</a></h2>
+        <a href="" lang="en">WebStudio</a>
         <address id="contacts">
           <ul>
             <li>
